[package]
name = "potato_plant_replay"
authors = [ "Bailey Danyluk <baileydanyluk@gmail.com>" ]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tungstenite = { version = "0.8" }
futures = { version = "0.3" }
bytes = { version = "1.2" }
uuid = { version = "1.2", features = ["v4", "fast-rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
log = { version = "0.4" }
pretty_env_logger = { version = "0.4" }
